--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <img src="images/products/burton-womens-yeasayer-flying-v-snowboard.jpg"/>
                         <p>Message</p>
                     </div>
-                    <p onclick="restrictedBrands(this)"><a href="#">Burton Women's Yeasayer Flying V Snowboard '21</a></p>
+                    <p><a class="product-name" href="#">Burton Women's Yeasayer Flying V Snowboard '21</a></p>
                     <p class="price">$449.95</p>
                 </div>
 
@@ -37,7 +37,7 @@
                         <img src="images/products/k2-boys-mini-turbo-snowboard.jpg"/>
                         <p>Message</p>
                     </div>
-                    <p onclick="restrictedBrands(this)"><a href="#">K2 Boy's Mini Turbo Snowboard '20</a></p>
+                    <p><a class="product-name" href="#">K2 Boy's Mini Turbo Snowboard '20</a></p>
                     <p class="price">$199.95</p>
                 </div>
 
@@ -46,7 +46,7 @@
                         <img src="images//products/ride-mens-snowtrooper-snowboard.jpeg"/>
                         <p>Message</p>
                     </div>
-                    <p onclick="restrictedBrands(this)"><a href="#">Ride Men's Snowtrooper Snowboard '21</a></p>
+                    <p><a class="product-name" href="#">Ride Men's Snowtrooper Snowboard '21</a></p>
                     <p class="price"><span class="discount-price">$499.93</span> <span class="original-price">$549.95</span></p>
                 </div>
             </div>
