--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <img src="images/products/k2-boys-mini-turbo-snowboard.jpg"/>
                         <p>Message</p>
                     </div>
-                    <p><a class="product-name" href="#">K2 Boy's Mini Turbo Snowboard '20</a></p>
+                    <p><a class="product-name" href="#">K2 Boy's Turbo Snowboard '20</a></p>
                     <p class="price">$199.95</p>
                 </div>
 
