Deals Button has EventListener

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p>New Snowboard Gear</p>
                 <h1>Never Stop Riding</h1>
                 <p>Get the latest snowboard gear from all your favorite brands like Burton, Ride, Lib Tech and more.</p>
-                <button onclick="checkSales()">Shop Snowboard Deals</button>
+                <button id="deals-button">Shop Snowboard Deals</button>
             </div>
         </header>
 
